# rust-lesson

blog_api/: Cargo.toml
blog_api/src/: main.rs
blog_api/src/handlers/: mod.rs  post_handler.rs
blog_api/src/models/: post.rs
crypto_tracker/: Cargo.toml
crypto_tracker/src/: api.rs  main.rs  models.rs  utils.rs
guessing_game/src/: main.rs
hi_rust/assets/: 404.html
hi_rust/src/: main.rs
lesson_10/lifetimes/src/: main.rs
lesson_10/traits/src/: lib.rs  main.rs
lesson_11/adder/src/: lib.rs
lesson_11/rust_test/tests/: integration_test.rs
lesson_14/crago_doc/src/: lib.rs  main.rs
lesson_15/box_type/src/: main.rs
lesson_15/drop_trait/src/: main.rs
lesson_15/reference_counted/src/: main.rs
lesson_16/message_passing/src/: main.rs
lesson_17/oop_pattern/: Cargo.toml
lesson_18/: cargo.toml
lesson_19/: cargo.toml
lesson_8/collections_hash_map/: Cargo.toml
lesson_8/collections_utf_8_strings/: Cargo.toml
lesson_9/error_panic_or_no_panic/: Cargo.toml
minigrep/src/: lib.rs  main.rs
rust_by_book/hello_world/: main
rust_by_book/hi_rust/: Cargo.toml
rust_by_book/lesson_15/: Cargo.toml
rust_by_book/lesson_16/: cargo.toml
rust_by_book/lesson_17/: cargo.toml
rust_by_book/minigrep/: output.txt
to_do/src/: actions.rs  main.rs  todo.rs  utils.rs
todo_web/: Cargo.toml  README.md  todo.json
todo_web/src/: main.rs  models.rs
todo_web/src/handlers/: todos.rs
todo_web/src/utils/: fs_helper.rs
web_server_01/: Cargo.toml
web_server_01/src/: assets_data.rs  handle_request.rs  main.rs
x_o_game/: Cargo.toml
(+63 files in other folders)
